2001-03-28  Dave Peticolas  <dave@krondo.com>

	* src/gnome/dialog-tax-info.c: more work

	* src/guile/gnc.gwp: wrap more of pricedb api

	* src/engine/gnc-pricedb.c (gnc_pricedb_get_prices): new func

2001-03-28  Bill Gribble  <grib@billgribble.com>

	* src/gnome/dialog-column-view.c: set the view dirty on edit

	* src/gnome/dialog-style-sheet.c: dirty every report using a
	stylesheet when it's edited.

	* src/gnome/window-report.c: Add display register/unregister for
	reports so the reports know which report-windows they are being
	displayed in.
	
	* src/scm/html-{bar,pie}chart.scm: Add a little space to work
	around a gtkhtml-0.8.3 bug in table display

	* src/scm/html-document.scm: move tree collapse and
	stringification to the html document rather than the report.  Add
	functions to render just the body elements of a document.

	* src/scm/html-table.scm: fix broken html-table-set-cell! 

	* src/scm/report.scm: add parents list to report struct.  Mark
	parents dirty when report is marked dirty.  reload windows showing
	a report on dirty.  Clean up rendering functions a little

	* src/scm/report/view-column.scm: Add a link to open each report
	in a window by itself.  Change rendering to allow children to be
	cached.
	
2001-03-28  Dave Peticolas  <dave@krondo.com>

	* src/gnome/dialog-tax-info.c: more work

	* src/engine/Transaction.c (DxaccSplitSetSharePriceAndAmount):
	do the double->numeric conversion directly.

	* src/guile/gnc.gwp: remove unused deprecated functions

	* src/engine/Transaction.c (xaccSplitsComputeValue): convert
	imbalance to base_currency fraction if possible

	* src/SplitLedger.c (LedgerDestroy): commit pending instead
	of rolling back.

2001-03-27  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report/average-balance.scm: Major rework: Uses
	option-utilities.scm. Added basic multi-currency handling. Fixed
	time interval handling.

	* src/scm/report/income-expense-graph.scm,
	income-or-expense-pie.scm: Use option-utilities.scm.
