@@ -1,0 +1,160 @@
+;; -*-scheme-*-
+
+;; portfolio.scm
+;; by Robert Merkel (rgmerk@mira.net)
+
+
+(gnc:support "report/portfolio.scm")
+(gnc:depend  "report-html.scm")
+
+(let ()
+  
+  (define (options-generator)    
+    (let* ((options (gnc:new-options)) 
+           ;; This is just a helper function for making options.
+           ;; See gnucash/src/scm/options.scm for details.
+           (add-option 
+            (lambda (new-option)
+              (gnc:register-option options new-option))))
+      
+      (add-option
+       (gnc:make-date-option
+	"General" "Date"
+	"a"
+	"Date to report on"
+	 (lambda () (cons 'absolute (cons (current-time) 0)))
+        #f 'absolute #f ))
+
+      (add-option
+       (gnc:make-account-list-option
+	"General" "Accounts" 
+	"b"
+	"Stock Accounts to report on"
+	(lambda () (filter gnc:account-is-stock? (gnc:group-get-account-list 
+						  (gnc:get-current-group))))
+	(lambda (accounts) (list  #t (filter gnc:account-is-stock? accounts)))
+	#t))
+
+      (add-option
+       (gnc:make-currency-option
+	"General" "Report Currency"
+	"c"
+	"Select the displayed currency"
+	(gnc:option-value
+	 (gnc:lookup-global-option "International"
+				   "Default Currency"))))
+
+      (gnc:options-set-default-section options "General")      
+      options))
+  
+  ;; This is the rendering function. It accepts a database of options
+  ;; and generates an object of type <html-document>.  See the file
+  ;; report-html.txt for documentation; the file report-html.scm
+  ;; includes all the relevant Scheme code. The option database passed
+  ;; to the function is one created by the options-generator function
+  ;; defined above.
+  (define (portfolio-renderer report-obj)
+    
+    ;; These are some helper functions for looking up option values.
+    (define (get-op section name)
+      (gnc:lookup-option (gnc:report-options report-obj) section name))
+    
+    (define (op-value section name)
+      (gnc:option-value (get-op section name)))
+    
+    (define (table-add-stock-rows table accounts to-date currency pricedb collector)
+      (if (null? accounts) collector
+	  (let* ((current (car accounts))
+		 (rest (cdr accounts))
+		 (name (gnc:account-get-name current))
+		(commodity (gnc:account-get-commodity current))
+		(ticker-symbol (gnc:commodity-get-mnemonic commodity))
+		(listing (gnc:commodity-get-namespace commodity))
+		(unit-collector (gnc:account-get-comm-balance-at-date current to-date #f))
+		(units (cadr (unit-collector 'getpair commodity #f)))
+	
+		(price (gnc:price-get-value
+			(gnc:pricedb-lookup-nearest-in-time pricedb
+							   commodity
+							   currency
+							   to-date)))
+		
+		(value-num (gnc:numeric-mul units 
+					    price
+					    (gnc:commodity-get-fraction currency)
+					    GNC-RND-ROUND))
+		(dummy (begin
+			 (gnc:warn "price " price)
+			 (gnc:warn "units " units)
+			 (gnc:warn "value-num" value-num)))
+		(value (gnc:make-gnc-monetary currency
+					      value-num)))
+	    (collector 'add currency value-num)
+	    (gnc:html-table-append-row! table (list name 
+						   ticker-symbol 
+						  listing 
+						  (gnc:numeric-to-double units)
+						  (gnc:make-gnc-monetary
+						   currency
+						   price)
+						  value
+						    )
+					)
+	    (table-add-stock-rows table rest to-date currency pricedb collector))))
+    
+		
+    ;; The first thing we do is make local variables for all the specific
+    ;; options in the set of options given to the function. This set will
+    ;; be generated by the options generator above.
+    (let ((to-date     (vector-ref (op-value "General" "Date") 1))
+          (accounts    (op-value "General" "Accounts"))
+	  (currency    (op-value "General" "Report Currency"))
+          (collector   (gnc:make-commodity-collector))
+          ;; document will be the HTML document that we return.
+	  (table (gnc:make-html-table))
+          (document (gnc:make-html-document))
+	  (pricedb (gnc:book-get-pricedb (gnc:get-current-book))))
+      
+      
+           
+        (gnc:html-document-set-title! document (sprintf #f
+							(_ "Investment Portfolio Report: %s")
+							(gnc:timepair-to-datestring to-date)))
+
+
+	(gnc:html-table-set-col-headers!
+	 table
+	 (list
+	  (N_ "Account")
+	  (N_ "Symbol")
+	  (N_ "Listing")
+	  (N_ "Units")
+	  (N_ "Price")
+	  (N_ "Value")))
+	  
+	(table-add-stock-rows table accounts to-date currency pricedb collector)
+	(collector 'format 
+		   (lambda (currency amount)
+		     (gnc:html-table-append-row! 
+		      table
+		      (list (gnc:make-gnc-monetary currency amount))))
+		   #f)
+	(gnc:html-document-add-object! document table)
+	document))
+
+  (gnc:define-report
+   
+   ;; The version of this report.
+   'version 1
+   
+   ;; The name of this report. This will be used, among other things,
+   ;; for making its menu item in the main menu. You need to use the
+   ;; untranslated value here!
+   'name (N_ "Investment Portfolio")
+   
+   ;; The options generator function defined above.
+   'options-generator options-generator
+   
+   ;; The rendering function defined above.
+   'renderer portfolio-renderer))
+
